# SETLE

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  AppConfig.h  CMakeLists.txt  CMakePresets.json  README.md
.claude/: settings.json
.github/workflows/: windows-ci.yml
assets/patterns/: pattern_manifest_batch.json
assets/patterns/hats_ride/: hats_ride_electronic_beat_straight_01.mid  hats_ride_electronic_beat_straight_02.mid  hats_ride_electronic_beat_straight_03.mid  hats_ride_electronic_beat_straight_04.mid  hats_ride_electronic_beat_straight_05.mid  hats_ride_electronic_beat_straight_06.mid  hats_ride_electronic_beat_straight_07.mid  hats_ride_electronic_beat_straight_08.mid  hats_ride_electronic_beat_straight_53.mid  hats_ride_electronic_beat_straight_54.mid  hats_ride_electronic_beat_straight_57.mid  hats_ride_electronic_fill_straight_09.mid  hats_ride_electronic_fill_straight_10.mid  hats_ride_electronic_fill_straight_11.mid  hats_ride_electronic_fill_straight_14.mid  hats_ride_electronic_fill_straight_16.mid  hats_ride_electronic_fill_straight_374.mid  hats_ride_electronic_fill_straight_51.mid  hats_ride_electronic_fill_straight_52.mid  hats_ride_electronic_fill_straight_55.mid  hats_ride_electronic_fill_straight_56.mid  hats_ride_electronic_fill_straight_58.mid  hats_ride_electronic_fill_straight_59.mid  hats_ride_electronic_fill_straight_64.mid  hats_ride_electronic_fill_straight_67.mid  hats_ride_electronic_fill_straight_69.mid  hats_ride_electronic_fill_straight_70.mid  hats_ride_electronic_fill_straight_71.mid  hats_ride_electronic_fill_straight_72.mid  hats_ride_electronic_fill_straight_73.mid  hats_ride_electronic_fill_straight_74.mid  hats_ride_electronic_fill_straight_76.mid  hats_ride_electronic_fill_straight_77.mid  hats_ride_electronic_fill_straight_78.mid  hats_ride_electronic_fill_straight_79.mid  hats_ride_electronic_fill_straight_85.mid  hats_ride_electronic_fill_straight_87.mid  hats_ride_electronic_fill_straight_94.mid  hats_ride_electronic_fill_straight_99.mid  hats_ride_general_beat_shuffled_113.mid  (+383 more)
assets/patterns/kick/: kick_rock_beat_straight_01.mid  kick_rock_beat_straight_02.mid  kick_rock_beat_straight_03.mid  kick_rock_beat_straight_04.mid  kick_rock_beat_straight_05.mid  kick_rock_beat_straight_06.mid  kick_rock_beat_straight_07.mid  kick_rock_beat_straight_08.mid  kick_rock_beat_straight_09.mid  kick_rock_beat_straight_10.mid  kick_rock_beat_straight_11.mid  kick_rock_beat_straight_12.mid  kick_rock_beat_straight_13.mid  kick_rock_beat_straight_14.mid  kick_rock_beat_straight_16.mid  kick_rock_beat_straight_17.mid  (+385 more)
docs/: 01_Harmony_and_Chord_Progressions.md  02_Scales_and_Bass_Theory.md  ARCHITECTURE.md  DEVELOPMENT_PLAN.md  DEV_SETUP.md  DOMAIN_MODEL_SCHEMA.md  GEMINI_FLASH_TASK_PLAN.md  IMPLEMENTATION_LOG.md  MAIN_IMPLEMENTATION_PLAN.md  PHASE2_CONTEXT_CONTROL_MATRIX.md  PROJECT_STATUS.md  THEORY_INTERACTION.md  UI_LAYOUT.md  UI_SHELL_IMPLEMENTATION.md  layout.md
docs/dev-notes/: control-family-refinement.md  theme-foundation-pass-a.md
source/: Main.cpp
source/capture/: CircularAudioBuffer.cpp  CircularAudioBuffer.h  GrabSamplerQueue.cpp  GrabSamplerQueue.h  GrabSlot.h  HistoryBuffer.cpp  HistoryBuffer.h
source/eff/: EffBlockPickerOverlay.cpp  EffBlockPickerOverlay.h  EffBuilderComponent.cpp  EffBuilderComponent.h  EffModel.h  EffProcessor.cpp  EffProcessor.h  EffSerializer.cpp  EffSerializer.h  EffTemplates.cpp  EffTemplates.h
source/gridroll/: ChordGridView.cpp  ChordGridView.h  DrumGridView.cpp  DrumGridView.h  DrumPatternBrowser.cpp  DrumPatternBrowser.h  DrumPatternLibrary.cpp  DrumPatternLibrary.h  DrumPatternMidiReader.cpp  DrumPatternMidiReader.h  GridRollCell.h  GridRollComponent.cpp  GridRollComponent.h  GroovePanel.cpp  GroovePanel.h  NoteDetailView.cpp  NoteDetailView.h  NoteModeView.cpp  NoteModeView.h
source/instruments/: InstrumentSlot.cpp  InstrumentSlot.h
source/midi/: MidiChordAnalyzer.cpp  MidiChordAnalyzer.h  MidiConstraintEngine.cpp  MidiConstraintEngine.h  MidiFileImporter.cpp  MidiFileImporter.h  MidiToProgressionConverter.cpp  MidiToProgressionConverter.h
source/mixer/: BusManager.cpp  BusManager.h  MasterStrip.cpp  MasterStrip.h  MixerComponent.cpp  MixerComponent.h  MixerStrip.cpp  MixerStrip.h
source/model/: SetleSongModel.cpp  SetleSongModel.h
source/module/: ModuleProcessor.h
source/state/: AppPreferences.cpp  AppPreferences.h
source/tests/: SetleSongModelTests.cpp
source/theme/: SetleLookAndFeel.h  ThemeData.h  ThemeEditorPanel.cpp  ThemeEditorPanel.h  ThemeManager.cpp  ThemeManager.h  ThemePresets.cpp  ThemePresets.h  ThemeStyleHelpers.cpp  ThemeStyleHelpers.h
source/theory/: BachTheory.cpp  BachTheory.h  ChordIdentifier.cpp  ChordIdentifier.h  DiatonicHarmony.cpp  DiatonicHarmony.h  MeterContext.cpp  MeterContext.h  TheoryAdapter.cpp  TheoryAdapter.h  TheoryEngine.cpp  TheoryEngine.h  TransitionAnalyzer.cpp  TransitionAnalyzer.h
source/timeline/: TimelineStampManager.cpp  TimelineStampManager.h  TimelineTracksComponent.cpp  TimelineTracksComponent.h  TrackLane.cpp  TrackLane.h  TrackManager.cpp  TrackManager.h
source/ui/: AppCommands.h  AppMenuBarModel.cpp  AppMenuBarModel.h  ArrangeWorkComponent.cpp  ArrangeWorkComponent.h  CreateWorkComponent.cpp  CreateWorkComponent.h  EditToolManager.cpp  EditToolManager.h  LeftNavComponent.cpp  LeftNavComponent.h  NavSection.h  ProgressionChordPalette.cpp  ProgressionChordPalette.h  ProgressionLibraryBrowser.cpp  ProgressionLibraryBrowser.h  QuesoLogoComponent.cpp  QuesoLogoComponent.h  SessionDashboardComponent.cpp  SessionDashboardComponent.h  SoundWorkComponent.cpp  SoundWorkComponent.h  ToolPaletteComponent.cpp  ToolPaletteComponent.h  WorkTabEnum.h  WorkspaceShell.Commands.cpp  WorkspaceShell.Commands.h  WorkspaceShell.Layout.cpp  WorkspaceShell.Layout.h  WorkspaceShell.Navigation.cpp  WorkspaceShell.Navigation.h  WorkspaceShell.SectionRouting.cpp  WorkspaceShellComponent.cpp  WorkspaceShellComponent.h  ZoneHeaderComponent.cpp  ZoneHeaderComponent.h
tools/: convert_spool_progressions.py
(+909 files in other folders)
